--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
+    "expo-dev-client": "~6.0.20",
     "expo-linking": "~8.0.11",
+    "expo-notifications": "^0.32.16",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
